--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "framer-motion": "^11.3.30",
     "localforage": "^1.10.0",
     "locomotive-scroll": "^5.0.0-beta.15",
     "match-sorter": "^6.3.4",
